--- a/packages/css/src/formElements/radiobutton/radiobutton.css
+++ b/packages/css/src/formElements/radiobutton/radiobutton.css
@@ -34,7 +34,7 @@
   height: 1.45rem;
   display: block;
   background-color: var(--md-color-surface-primary);
-  border: 1px solid var(--mdPrimaryColor);
+  border: 1px solid var(--md-color-cta-primary-default);
   border-radius: var(--md-radius-half);
   margin: 0 var(--md-size-8) 0 0;
   box-sizing: border-box;
