--- a/packages/css/src/tile/tile.css
+++ b/packages/css/src/tile/tile.css
@@ -196,7 +196,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: var(--md-size-16);
-  color: var(--mdPrimaryColor80);
+  color: var(--md-color-cta-primary-focus);
   width: 8rem;
   height: 8rem;
 }
